--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,17 @@
     <link rel="stylesheet" href="style.css">;
     <link rel="stylesheet" href="reset.css">;
 </head>
+
 <body>
-    <header class ="cabecalho">
-        <span class="cabecalho-menu-hamburguer"></span>
-        <img src="img/Logo.png"> alt="Logo da AluraBooks">
-        <a href="#"> <img src="img/Favoritos.png" alt="Meus favoritos">/a>
-        <a href ="#"><img src="img/Sacola.png" alt="Carrinho de compra" >/a>
-            <a href="#">< img src="img/Perfil.png"alt=" Meu perfil" >/a>
+    <header class="cabecalho">
+        <div class="container">
+            <span class="cabecalho-menu-hamburguer"></span>
+            <img src="img/Logo.png"> alt="Logo da AluraBooks">
+        </div>
+        <a href="#"> <img src="img/Favoritos.png" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Sacola.png" alt="Carrinho de compra"></a>
+        <a href="#"><img src="img/Perfil.png" alt=" Meu perfil"></a>
     </header>
 </body>
+
 </html>
