--- a/index.html
+++ b/index.html
@@ -59,43 +59,24 @@
             <div class="swiper-pagination"></div>
             <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre Apache Kafta da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre Liderança da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre Acessibilidade da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Angular.png" alt="Livro sobre Angular da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Arquitetura.png" alt="Livro sobre Arquitetura da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Construct2.png" alt="Livro sobre Construct2 AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Favoritos.png" alt="Livro sobre Favoritos da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Gestão.png" alt="Livro sobre Gestão da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Gestão2.png" alt="Livro sobre Gestão2 da AluraBooks"></div>
-                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Guia font da AluraBooks"></div>
-
-                ...
+                <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre apache Kafka da AluraBooks"></div>
+                <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da AluraBooks"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Front-End da AluraBooks"></div>
             </div>
-            <!-- If we need pagination -->
-         
-
-            <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
         </div>
-
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
     <script>
         const swiper = new Swiper('.swiper', {
         spaceBetween: 10,
-        slidePerView: 3, 
+        slidesPerView: 3,
         pagination: {
             el:'.swiper-pagination',
-            type; 'bullets',
-
+            type: 'bullets',
         },
-});
+    });
     </script>
 </body>
 
