--- a/index.html
+++ b/index.html
@@ -98,27 +98,29 @@
                 <a href="#" class="topicos-link">Android</a>
             </li>
             <li class="topicos-item">
-                <a href="#" class="topicos-link">Marketing Digital</a>
+                <a href="#" class="topicos-link">Android</a>
             </li>
             <li class="topicos-item">
-                <a href="#" class="topicos-link">Agile</a>
+                <a href="#" class="topicos-link">Android</a>
             </li>
             <li class="topicos-item">
-                <a href="#" class="topicos-link">Startups</a>
+                <a href="#" class="topicos-link">Android</a>
             </li>
             <li class="topicos-item">
-                <a href="#" class="topicos-link">HTML & CSS</a>
+                <a href="#" class="topicos-link">Android</a>
             </li>
             <li class="topicos-item">
-                <a href="#" class="topicos-link">Python</a>
+                <a href="#" class="topicos-link">Android</a>
             </li>
             <li class="topicos-item">
-                <a href="#" class="topicos-link">OO</a>
-            </li>
-            <li class="topicos-item">
-                <a href="#" class="topicos-link">Java</a>
+                <a href="#" class="topicos-link">Android</a>
             </li>
         </ul>
+    </section>
+    <section class="contato">
+        <h2 class="contato-titulo">Fique por dentro das novidades!</h2>
+        <p class="contato-texto">Atualizações de e-books,
+        novos livros, promoções e outros.</p>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
